Update README for version 2.0 changes
Updated Java and JavaFX versions in README and modified project description to reflect the new architecture and features.